added some placeholder text until CSS is fixed to be easier to read and more visually appealing. Reimplemented Grid layout that has Header components that will be replaced with Button component.

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ main {
   justify-content: center;
 }
 
-p {
+.welcome-text {
   cursor: pointer;
   position: relative;
   display: inline-block;
@@ -46,6 +46,10 @@ p {
   background-repeat: no-repeat;
   transition: background 0.2s ease-out;
   white-space: nowrap;
+}
+
+p{
+  color: #fff;
 }
 
 span {
